# freebsd

./: 10-amd64-GENERIC-snap.conf  10-arm-GUMSTIX-snap.conf  10-armv6-BEAGLEBONE-snap.conf  10-armv6-CUBOX-HUMMINGBOARD-snap.conf  10-armv6-PANDABOARD-snap.conf  10-armv6-RPI-B-snap.conf  10-armv6-WANDBOARD-snap.conf  10-i386-GENERIC-snap.conf  10-ia64-GENERIC-snap.conf  10-powerpc-GENERIC-snap.conf  10-powerpc64-GENERIC64-snap.conf  10-sparc64-GENERIC-snap.conf  11-aarch64-GENERIC-snap.conf  11-amd64-GENERIC-snap.conf  11-arm-GUMSTIX-snap.conf  11-armv6-BANANAPI-snap.conf  11-armv6-BEAGLEBONE-snap.conf  11-armv6-CUBIEBOARD-snap.conf  11-armv6-CUBIEBOARD2-snap.conf  11-armv6-CUBOX-HUMMINGBOARD-snap.conf  11-armv6-GUMSTIX-snap.conf  11-armv6-PANDABOARD-snap.conf  11-armv6-RPI-B-snap.conf  11-armv6-RPI2-snap.conf  11-armv6-WANDBOARD-snap.conf  11-i386-GENERIC-snap.conf  11-powerpc-GENERIC-snap.conf  11-powerpc64-GENERIC64-snap.conf  11-sparc64-GENERIC-snap.conf  12-aarch64-GENERIC-snap.conf  12-aarch64-PINE64-snap.conf  12-aarch64-RPI3-snap.conf  12-amd64-GENERIC-snap.conf  12-arm-GUMSTIX-snap.conf  12-armv6-BANANAPI-snap.conf  12-armv6-BEAGLEBONE-snap.conf  12-armv6-CUBIEBOARD-snap.conf  12-armv6-CUBIEBOARD2-snap.conf  12-armv6-CUBOX-HUMMINGBOARD-snap.conf  12-armv6-GUMSTIX-snap.conf  (+341 more)
01.intro/: Makefile  lection.tex
02.entering_kernel/: lection.tex
03.processes&threads/: lection.tex
04.synchronisation/: lection.tex
05.memory/: lection.tex
06.filedesc/: lection.tex
07.io/: lection.tex  vtblk_strategy.d
08.io2/: Makefile  kern.geom.conf.dot  kern.geom.conf.xml  lection.tex
09.mbufs/: Makefile  lection.tex
AutoAssigner/: Config.pm  Extension.pm
acpi_sony/: acpi_sony.c  acpi_sony.h
bhyve/: Makefile  block_if.c  pci_virtio_block.c  xmsr.c
bhyveload/: Makefile  bhyveload.c
btx_mod/: btxv86.h
calendars/: calendar.dutch  calendar.freebsd  calendar.judaic
conf/: apache.conf  client.conf  common.conf  files  files.amd64  files.i386  files.ia64  files.powerpc  files.sparc64  make.conf  options.powerpc  server.conf  systags.sh
crontabs/: portbuild  portmgr  root
db/: fbce.sql  fbp.sql  genuserlist.pl  genuserlist.sh  notes  update.sh
devd2dbus/: bsdbus.c  bsdbus.h
distextract/: Makefile  distextract.c
distfetch/: Makefile  distfetch.c
docs/: mk2  mkpointyhat
ec2-bits/: README  ec2-config.sh
errorlogs/: index.html  index.shtml
etc/: Makefile  charmaps.xml  default.rc  freebsd10-build.rc  freebsd10-update.rc  freebsd7-build.rc  freebsd7-update.rc  freebsd8-build.rc  freebsd8-update.rc  freebsd9-build.rc  freebsd9-update.rc  head-build.rc  head-nobmake-build.rc  head-noclang-build.rc  head-ss-build.rc  head-ss-update.rc  head-update.rc  head.rc  network.subr  regdomain.xml  releng_4.rc  releng_5.rc  releng_6.rc  releng_7.rc  releng_8.rc  releng_9.rc  unicode.conf  update_head.rc  update_releng_4.rc  update_releng_5.rc  update_releng_6.rc  update_releng_7.rc  update_releng_8.rc  update_releng_9.rc
firewire/: firewire.c  fwohci.c  fwohci_pci.c  fwohcireg.h
fwcontrol/: fwcontrol.c
gnats-adm/: addresses  categories  classes  config  edit-pr-msg  gnatsd.access  gnatsd.conf  responsible  states  submitters
i386_mod/: Makefile
include/: Fetch.hh  Makefile  Makefile.am  fastmatch.h  hashtable.h  mregex.h  pthread.h  regex.h  stress.h  tre.h
kerberos5/: Makefile.inc
kern/: boot.S  console.c  console.h  kern_rmlock.c  multiboot.h  subr_pcpu.c  subr_witness.c  test1.c  vfs_export.c
lib/: FBCE.pm  FBP.pm  Makefile  Makefile.am  URL.cc  console.c  console.h  main.c  options.c  random_int.c  resources.c  string.c  string.h  types.h
libexec/: adduser  auto  distextract  distfetch  hostname  mediaselect  mount  netconfig  partedit  rootpass  services  time
libi386_mod/: Makefile  pxe.c
libstand_mod/: printf.c  stand.h
libvdsk/: Makefile  qcow.c  raw.c  vdsk.c  vdsk.h  vdsk_int.h  vhd.c  vmdk.c
loader_mod/: Makefile  conf.c  main.c
misc/: 256m.sh  advlock.sh  all.debug.inc  all.sh  apache.conf  (+569 more)
src/distill/: Makefile.am  auth.c  distill.c  distill.h  editor.c  error.c  log.c  ra.c  txdelta.c
(+4372 files in other folders)
