dnl $Id$

AC_PREREQ([2.62])
AC_REVISION([$Id$])
AC_INIT([refetch], [trunk], [des@des.no])
AC_CONFIG_SRCDIR([include/refetch.hh])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign])
AM_CONFIG_HEADER([config.h])

AC_LANG(C)
AC_LANG(C++)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_LIBTOOL
AC_PROG_INSTALL

AC_CONFIG_FILES([
    Makefile
    include/Makefile
    lib/Makefile
    lib/fetch/Makefile
    lib/refetch/Makefile
])
AC_OUTPUT
